<resources>
    <string name="app_name">WillMaterialDesign</string>
    <string name="menu_button">Button</string>
    <string name="menu_text">Text Field</string>
    <string name="menu_dialog">Dialog</string>
    <string name="menu_controls">Controls</string>
    <string name="menu_snack">Snackbars</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_collapsing">CollapsingLayout</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="text_field">Text Field</string>
    <string name="botao_elevado">BOTÃO ELEVADO</string>
    <string name="botao_flat">BOTÃO FLAT</string>
    <string name="buttons">Buttons</string>
    <string name="login">LOGIN</string>
    <string name="willian_cortes">WILLIAN CORTES</string>
    <string name="email_will">williankzn@gmail.com</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="outros">Outros</string>
    <string name="liga_desliga">Liga/Desliga</string>
    <string name="ligado">Ligado</string>
    <string name="desligado">Desligado</string>
    <string name="gosto_de_sorvete">Gosto de sorvete</string>
    <string name="nao_gosto_de_sorvete">Não gosto de sorvete</string>
    <string name="opcao1">Opção 1</string>
    <string name="opcao2">Opção 2</string>
    <string name="opcao3">Opção 3</string>
    <string name="alert_dialog">ALERT DIALOG</string>
    <string name="deseja_excluir">Deseja Excluir?</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="dialog_multi">DIALOG MULTI</string>
    <string name="dialog_single">DIALOG SINGLE</string>
    <string name="selecione_opcao_desejada">Selecione a opção desejada:</string>
    <string name="ok">OK</string>
    <string name="cancelar">CANCELAR</string>
    <string name="dialogs">Dialogs</string>
    <string name="item_excluido">ITEM EXCLUIDO</string>
    <string name="fechar">FECHAR</string>
    <string name="snack_fechada">SnackBar foi fechada</string>
    <string name="exemplo_cardview">Exemplo CardView.</string>
    <string name="campeao_da_copa">Campeão da Copa do Brasil</string>
    <string name="geromel_e_kannemann">Geromel e Kannemann</string>
    <string name="botao_1">BOTAO 1</string>
    <string name="botao_2">BOTAO 2</string>
    <string name="celular">Celular</string>
    <string name="cel_will">(51) 99999-9999</string>
    <string name="endereco">Endereço</string>
    <string name="end_will">Rua Abc 129, Porto Alegre - RS</string>
    <string name="acessar">ACESSAR</string>
    <string name="titulo">Título</string>
    <string name="subtitulo">Subtitulo</string>
</resources>
