<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btDialog"
        style="@style/RaisedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/alert_dialog" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btDialogSingleItems"
        style="@style/RaisedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/dialog_single" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btDialogMultiItems"
        style="@style/RaisedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/dialog_multi" />

</LinearLayout>